@@ -1,3 +1,4 @@
+* Add MultiSelection entry to Dict field
 * Position new record based on order
 * Allow relation field to be selected in CSV export
 * Support validate attribute of wizard's Button
